--- a/package.json
+++ b/package.json
@@ -11,6 +11,18 @@
     "build": "echo 'Bulding.... (not actually doing something, but usually I would)'"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "aos": "^2.3.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.12.0",
+    "nodemon": "^2.0.20",
+    "react-grid-carousel": "^1.0.1",
+    "react-slick": "^0.29.0",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1"
   }
 }
