--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.12.0",
-    "nodemon": "^2.0.20",
-    "react-grid-carousel": "^1.0.1",
-    "react-slick": "^0.29.0",
-    "slick": "^1.12.2",
-    "slick-carousel": "^1.8.1"
+    "nodemon": "^2.0.20"
+
   }
 }
