--- a/package.json
+++ b/package.json
@@ -11,15 +11,6 @@
     "build": "echo 'Bulding.... (not actually doing something, but usually I would)'"
   },
   "dependencies": {
-    "aos": "^2.3.4",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-session": "^1.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.12.0",
-    "nodemon": "^2.0.20"
-
+    "express": "^4.17.1"
   }
 }
